--- a/bootstrap/Brewfile
+++ b/bootstrap/Brewfile
@@ -12,8 +12,8 @@ brew "curl"
 brew "openssl@1.1"
 cask "ssh-tunnel-manager"
 cask "tunnelblick"
-cask "okta"
-brew "speedtest"
+cask "okta-advanced-server-access"
+brew "speedtest-cli"
 brew "bitwarden-cli"
 brew "ca-certificates"
 brew "wget"
