[Software] Brewfile and software script updates

--- a/bootstrap/Brewfile
+++ b/bootstrap/Brewfile
@@ -2,6 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "aws/tap"
+tap "heroku/brew"
 
 brew "zsh"
 brew "zsh-completions"
@@ -71,13 +72,13 @@ brew "podman"
 brew "lima"
 
 # Terraform
-brew "tfenv"
 brew "terraform"
 brew "terraform-docs"
+brew "tfenv"
 	
 # Database
 brew "postgresql"
-brew "mongodb-community"
+brew "mongodb-atlas-cli"
 brew "mysql"
 brew "sqlite"
 
@@ -88,7 +89,8 @@ brew "ruby-install"
 # Kubernetes
 brew "kubernetes-cli"
 brew "kubectx"
-brew "kubelogin"	
+brew "kube-linter"	
+brew "Azure/kubelogin/kubelogin"
 brew "k9s"
 brew "minikube"
 brew "helm"	
@@ -119,7 +121,7 @@ brew "circleci"
 
 # Applications
 cask "slack"
-cask "spotify"
+# cask "spotify"
 cask "bitwarden"
 cask "microsoft-office"
 cask "microsoft-teams"
@@ -130,5 +132,5 @@ cask "raspberry-pi-imager"
 cask "dbeaver-community"
 cask "signal"
 cask "insomnia"
-cask "visual-studio-code"
+# cask "visual-studio-code"
 # cask "intellij-idea-ce"
