--- a/bootstrap/Brewfile
+++ b/bootstrap/Brewfile
@@ -45,7 +45,8 @@ cask "temurin17"
 # Node
 brew "nodenv"
 brew "node@14"
-brew "node@16"
+brew "node@20"
+brew "node@22"
 brew "yarn"
 brew "mockserver"
 brew "gulp-cli"
@@ -94,7 +95,7 @@ brew "rust"
 brew "kubernetes-cli"
 brew "kubectx"
 brew "kube-linter"	
-brew "Azure/kubelogin/kubelogin"
+# brew "Azure/kubelogin/kubelogin"
 brew "k9s"
 brew "minikube"
 brew "helm"	
@@ -112,6 +113,7 @@ brew "adr-tools"
 brew "plantuml"
 brew "d2"
 cask "processing"
+brew "qmk-toolbox"
 
 # AWS
 brew "awscli"
